force-app/main/default/objects/Behavior_Pattern_Rule__mdt/Behavior_Pattern_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Behavior Pattern Rule</label>
    <pluralLabel>Behavior Pattern Rules</pluralLabel>
    <description>Defines detection rules and remediation logic for the BehaviorIQ engine. Replaces hardcoded Apex logic for scalability.</description>
</CustomObject>