force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Apex_Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Handler_Class__c</fullName>
    <description>The fully qualified name of an Apex class that implements the PatternPlugin interface. Only used when Logic_Type__c is set to Apex_Plugin. The class must be global and implement both analyze() and fix() methods.</description>
    <inlineHelpText>Enter the Apex class name (e.g., MyCustomPlugin or MyNamespace.MyPlugin). The class must implement the PatternPlugin interface.</inlineHelpText>
    <label>Apex Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>