force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Cost_Per_Incident__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Incident__c</fullName>
    <description>Estimated cost or risk value per detected incident. Used to calculate ROI and display "Estimated Savings" on the dashboard. For example, a stale opportunity might have a Cost_Per_Incident of $500 representing at-risk revenue.</description>
    <inlineHelpText>Estimated cost/risk per incident for ROI calculations (e.g., $500 for at-risk opportunity)</inlineHelpText>
    <label>Cost Per Incident</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>