force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>User-friendly description explaining what this pattern detects and why it matters.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>