force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Fix_Config__c.field-meta.xml
<CustomField>
    <fullName>Fix_Config__c</fullName>
    <description>JSON payload configuring the fix. Example: {"priority": "High", "subject": "Fix Stale Case"}</description>
    <label>Fix Configuration (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>