force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Fix_Type__c.field-meta.xml
<CustomField>
    <fullName>Fix_Type__c</fullName>
    <description>Determines the remediation strategy used by PatternFixService.</description>
    <label>Fix Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task_Creation</fullName>
                <default>true</default>
                <label>Task Creation</label>
            </value>
            <value>
                <fullName>Owner_Assignment</fullName>
                <label>Owner Assignment</label>
            </value>
            <value>
                <fullName>Field_Update</fullName>
                <label>Field Update</label>
            </value>
            <value>
                <fullName>Email_Notification</fullName>
                <label>Email Notification</label>
            </value>
            <value>
                <fullName>Opportunity_Creation</fullName>
                <label>Opportunity Creation</label>
            </value>
            <value>
                <fullName>Escalation_Revert</fullName>
                <label>Escalation Revert</label>
            </value>
            <value>
                <fullName>No_Action</fullName>
                <label>No Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>