force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this pattern rule is active and should be processed by the PatternAnalysisService. Set to false to soft-delete a rule without removing the metadata record.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>