force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Is_Premium__c.field-meta.xml
<CustomField>
    <fullName>Is_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this rule requires a valid LicenseService check before execution.</description>
    <label>Is Premium</label>
    <type>Checkbox</type>
</CustomField>