force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Logic_Type__c</fullName>
    <description>Determines how the pattern detection and fix logic is executed. Standard uses built-in SOQL queries and Fix_Type__c routing. Declarative uses JSON-based configuration in Fix_Config__c. Apex_Plugin invokes a custom class implementing the PatternPlugin interface.</description>
    <inlineHelpText>Standard: Uses Query_Condition__c and Fix_Type__c. Declarative: Uses JSON actions in Fix_Config__c. Apex_Plugin: Invokes custom class in Apex_Handler_Class__c.</inlineHelpText>
    <label>Logic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Declarative</fullName>
            </value>
            <value>
                <fullName>Apex_Plugin</fullName>
                <label>Apex Plugin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>