force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The API name of the object this rule applies to (e.g., Case, Lead, Opportunity).</description>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>