force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Query_Condition__c.field-meta.xml
<CustomField>
    <fullName>Query_Condition__c</fullName>
    <description>The SOQL WHERE clause snippet used to detect the behavior. Example: Status != 'Closed' AND LastModifiedDate &lt; LAST_N_DAYS:30</description>
    <label>Query Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>