force-app/main/default/objects/Behavior_Pattern_Rule__mdt/fields/Threshold_Default__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Default__c</fullName>
    <description>The default integer value for the rule (e.g., 30 for '30 Days'). Used as a fallback if no dynamic Admin override exists.</description>
    <label>Threshold (Default)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>